WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
230275
[Win] JSRemoteInspector.h missing stdint include
https://bugs.webkit.org/show_bug.cgi?id=230275
Summary
[Win] JSRemoteInspector.h missing stdint include
Ross Kirsling
Reported
2021-09-14 13:46:31 PDT
[WinCairo] Add missing include for testapi
Attachments
Patch
(1.11 KB, patch)
2021-09-14 13:46 PDT
,
Ross Kirsling
no flags
Details
Formatted Diff
Diff
Patch
(1.17 KB, patch)
2021-09-14 13:54 PDT
,
Ross Kirsling
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Ross Kirsling
Comment 1
2021-09-14 13:46:49 PDT
Created
attachment 438163
[details]
Patch
Don Olmstead
Comment 2
2021-09-14 13:52:54 PDT
Comment on
attachment 438163
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=438163&action=review
r=me with nits.
> Source/JavaScriptCore/ChangeLog:3 > + [WinCairo] Add missing include for testapi
I would have this be [Win] JSRemoteInspector.h missing stdint include At one point we found it with testapi but the actual reason is were missing a definition for uint8_t when including JSRemoteInspector.h on its own.
> Source/JavaScriptCore/ChangeLog:7 > +
Reason is basically "Include stdint for uint8_t definition on Windows"
Ross Kirsling
Comment 3
2021-09-14 13:54:53 PDT
Created
attachment 438166
[details]
Patch
EWS
Comment 4
2021-09-14 15:09:26 PDT
Committed
r282413
(
241672@main
): <
https://commits.webkit.org/241672@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 438166
[details]
.
Radar WebKit Bug Importer
Comment 5
2021-09-14 15:10:16 PDT
<
rdar://problem/83118735
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug