[Win] JSRemoteInspector.h missing stdint include https://bugs.webkit.org/show_bug.cgi?id=230275

Reviewed by Don Olmstead.

* API/JSRemoteInspector.h:
Include stdint for uint8_t definition on Windows.


Canonical link: https://commits.webkit.org/241672@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@282413 268f45cc-cd09-0410-ab3c-d52691b4dbfc